update services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -80,66 +80,89 @@
         <div class="container">
             <div class="services-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
                 <div class="service-card">
-                    <div class="service-icon">🌐</div>
+                    <img src="../images/services/app-development.png" alt="Website Development" class="service-icon">
                     <h3>Website Development</h3>
                     <p>Creating sleek, user-friendly websites designed to captivate audiences and drive conversions. We build responsive, fast-loading sites that reflect your brand identity.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">⚡</div>
+                    <img src="../images/services/content-strategy.png" alt="Social Media Marketing" class="service-icon">
                     <h3>Social Media Marketing</h3>
                     <p>Building strong brand connections through targeted strategies and engaging content across social platforms. We manage, create, and optimize your social presence.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🔍</div>
+                    <img src="../images/services/search-engine-optimization.png" alt="Search Engine Optimization" class="service-icon">
                     <h3>Search Engine Optimization (SEO)</h3>
                     <p>Boosting your online presence with tailored strategies to improve search rankings and organic traffic. Our SEO experts use proven techniques to increase visibility.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📊</div>
+                    <img src="../images/services/click-through-rate.png" alt="Pay-Per-Click Advertising" class="service-icon">
                     <h3>Pay-Per-Click Advertising</h3>
                     <p>Maximizing ROI with precision-targeted ads that deliver instant visibility and measurable results. We manage campaigns across Google, Facebook, and other platforms.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📱</div>
+                    <img src="../images/services/app-settings.png" alt="Mobile App Development" class="service-icon">
                     <h3>Mobile App Development</h3>
                     <p>Designing and developing user-friendly and high-performance mobile apps for iOS and Android. We create apps that engage users and drive business growth.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">💻</div>
+                    <img src="../images/services/coding.png" alt="Web Application Development" class="service-icon">
                     <h3>Web Application Development</h3>
                     <p>Developing secure, responsive, and feature-rich web applications tailored to your business needs. We build scalable solutions that grow with your business.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🎨</div>
+                    <img src="../images/services/3d-glasses.png" alt="3D Animation Services" class="service-icon">
                     <h3>3D Animation Services</h3>
                     <p>Creating captivating animations to bring stories and concepts to life with stunning visuals. Perfect for product demonstrations and brand storytelling.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🎬</div>
+                    <img src="../images/services/animation.png" alt="CGI Animation Services" class="service-icon">
                     <h3>CGI Animation Services</h3>
                     <p>Producing hyper-realistic and visually immersive CGI animations for dynamic storytelling. We create professional-grade animations for marketing and entertainment.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🎭</div>
+                    <img src="../images/services/ideas.png" alt="Creative Production Services" class="service-icon">
                     <h3>Creative Production Services</h3>
                     <p>Crafting visually stunning graphics, videos, and designs that resonate with your audience. From concept to final delivery, we handle all creative needs.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🎯</div>
+                    <img src="../images/services/branding.png" alt="Brand Identity Design" class="service-icon">
                     <h3>Brand Identity Design</h3>
                     <p>Developing cohesive brand identities that reflect your vision and make a lasting impression. We create logos, guidelines, and visual systems.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">✍️</div>
+                    <img src="../images/icons/content-marketing.svg" alt="Content Marketing" class="service-icon">
                     <h3>Content Marketing</h3>
                     <p>Engaging your audience with compelling, value-driven content that drives traffic and builds trust. We create blogs, articles, and multimedia content.</p>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">📈</div>
+                    <img src="../images/icons/public-relations.svg" alt="Public Relations" class="service-icon">
                     <h3>Public Relations</h3>
                     <p>Building and managing your brand’s public image through strategic communication and media outreach. We craft press releases, manage media relations, and handle brand messaging to strengthen reputation and build trust with your audience.</p>
+                </div>                <div class="service-card">
+                    <img src="../images/icons/media-content.svg" alt="Media Content" class="service-icon">
+                    <h3>Media Content</h3>
+                    <p>Producing high-quality video, audio, and multimedia content that engages your audience and amplifies your message. We handle everything from scripting to post-production.</p>
                 </div>
-            </div>
+                <div class="service-card">
+                    <img src="../images/icons/content-strategy.svg" alt="Content Strategy" class="service-icon">
+                    <h3>Content Strategy</h3>
+                    <p>Developing comprehensive content strategies aligned with your business goals. We plan, create, and distribute content that resonates with your target audience and drives engagement.</p>
+                </div>
+                <div class="service-card">
+                    <img src="../images/icons/media-training.svg" alt="Media Training" class="service-icon">
+                    <h3>Media Training</h3>
+                    <p>Equipping your team with essential media and communication skills. Our workshops cover interview preparation, public speaking, crisis communication, and digital media expertise.</p>
+                </div>
+                <div class="service-card">
+                    <img src="../images/icons/corporate-communications.svg" alt="Corporate Communications" class="service-icon">
+                    <h3>Corporate Communications</h3>
+                    <p>Crafting clear and compelling internal and external corporate messages. We develop communication strategies that strengthen stakeholder relationships and enhance brand reputation.</p>
+                </div>
+                <div class="service-card">
+                    <img src="../images/icons/internal-communications.svg" alt="Internal Communications" class="service-icon">
+                    <h3>Internal Communications</h3>
+                    <p>Building effective internal communication channels that keep employees informed and engaged. We develop strategies, newsletters, and intranet content to foster company culture and alignment.</p>
+                </div>            </div>
         </div>
     </section>
 
