full update for services icons

--- a/pages/services.html
+++ b/pages/services.html
@@ -130,36 +130,36 @@
                     <p>Developing cohesive brand identities that reflect your vision and make a lasting impression. We create logos, guidelines, and visual systems.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/content-marketing.svg" alt="Content Marketing" class="service-icon">
+                    <img src="../images/services/content.png" alt="Content Marketing" class="service-icon">
                     <h3>Content Marketing</h3>
                     <p>Engaging your audience with compelling, value-driven content that drives traffic and builds trust. We create blogs, articles, and multimedia content.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/public-relations.svg" alt="Public Relations" class="service-icon">
+                    <img src="../images/services/public-relation.png" alt="Public Relations" class="service-icon">
                     <h3>Public Relations</h3>
                     <p>Building and managing your brand’s public image through strategic communication and media outreach. We craft press releases, manage media relations, and handle brand messaging to strengthen reputation and build trust with your audience.</p>
                 </div>                <div class="service-card">
-                    <img src="../images/icons/media-content.svg" alt="Media Content" class="service-icon">
+                    <img src="../images/services/media-content.png" alt="Media Content" class="service-icon">
                     <h3>Media Content</h3>
                     <p>Producing high-quality video, audio, and multimedia content that engages your audience and amplifies your message. We handle everything from scripting to post-production.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/content-strategy.svg" alt="Content Strategy" class="service-icon">
+                    <img src="../images/services/content-strategy2.png" alt="Content Strategy" class="service-icon">
                     <h3>Content Strategy</h3>
                     <p>Developing comprehensive content strategies aligned with your business goals. We plan, create, and distribute content that resonates with your target audience and drives engagement.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/media-training.svg" alt="Media Training" class="service-icon">
+                    <img src="../images/services/training.png" alt="Media Training" class="service-icon">
                     <h3>Media Training</h3>
                     <p>Equipping your team with essential media and communication skills. Our workshops cover interview preparation, public speaking, crisis communication, and digital media expertise.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/corporate-communications.svg" alt="Corporate Communications" class="service-icon">
+                    <img src="../images/services/businesswoman.png" alt="Corporate Communications" class="service-icon">
                     <h3>Corporate Communications</h3>
                     <p>Crafting clear and compelling internal and external corporate messages. We develop communication strategies that strengthen stakeholder relationships and enhance brand reputation.</p>
                 </div>
                 <div class="service-card">
-                    <img src="../images/icons/internal-communications.svg" alt="Internal Communications" class="service-icon">
+                    <img src="../images/services/communications.png" alt="Internal Communications" class="service-icon">
                     <h3>Internal Communications</h3>
                     <p>Building effective internal communication channels that keep employees informed and engaged. We develop strategies, newsletters, and intranet content to foster company culture and alignment.</p>
                 </div>            </div>
