update some of clients

--- a/pages/clients.html
+++ b/pages/clients.html
@@ -54,16 +54,20 @@
     <img src="../images/Clients/page20_img4.png" alt="Client 14">
     <img src="../images/Clients/page20_img5.png" alt="Client 15">
     <img src="../images/Clients/page20_img6.png" alt="Client 16">
+    <img src="../images/Clients/saudi-icon.png" alt="Client 23">
     <img src="../images/Clients/page20_img7.jpeg" alt="Client 17">
     <img src="../images/Clients/page20_img8.png" alt="Client 18">
     <img src="../images/Clients/page19_img1.png" alt="Client 1">
     <img src="../images/Clients/page19_img3.png" alt="Client 3">
     <img src="../images/Clients/page19_img5.png" alt="Client 5">
     <img src="../images/Clients/page19_img6.png" alt="Client 6">
-    <img src="../images/Clients/page19_img8.png" alt="Client 8">
     <img src="../images/Clients/page19_img9.jpeg" alt="Client 9">
     <img src="../images/Clients/page19_img10.png" alt="Client 10">
     <img src="../images/Clients/page20_img10.png" alt="Client 20">
+    <img src="../images/Clients/najdsteel.png" alt="Client 21">
+    <img src="../images/Clients/Zutari.png" alt="Client 22">
+    <img src="../images/Clients/al_moallim_company_logo.png" alt="Client 24">
+
   </div>
 </section>
 
