quick links update

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <ul>
                         <li><a href="#about">About</a></li>
                         <li><a href="pages/services.html">Services</a></li>
-                        <li><a href="pages/portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="pages/portfolio.html">Portfolio</a></li>-->
                         <li><a href="pages/clients.html">Clients</a></li>
                     </ul>
                 </div>
