--- a/pages/clients.html
+++ b/pages/clients.html
@@ -96,7 +96,7 @@
                     <ul>
                         <li><a href="../index.html#about">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                         <li><a href="clients.html">Clients</a></li>
                     </ul>
                 </div>
