--- a/pages/contact.html
+++ b/pages/contact.html
@@ -194,7 +194,7 @@
         }
 
         .contact-btn.phone-btn {
-            background: linear-gradient(135deg, #00d9ff 0%, #00a8cc 100%);
+            background: linear-gradient(135deg, #00d9ff 100%, #00a8cc 100%);
             color: white;
             box-shadow: 0 6px 20px rgba(0, 217, 255, 0.2);
         }
@@ -421,7 +421,7 @@
                     <ul>
                         <li><a href="../index.html#about">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                         <li><a href="clients.html">Clients</a></li>
                     </ul>
                 </div>
