--- a/pages/clients.html
+++ b/pages/clients.html
@@ -56,6 +56,10 @@
     <img src="../images/Clients/page20_img6.png" alt="Client 16">
     <img src="../images/Clients/saudi-icon.png" alt="Client 23">
     <img src="../images/Clients/page20_img7.jpeg" alt="Client 17">
+    <img src="../images/Clients/spl.png" alt="spl">
+    <img src="../images/Clients/nomac-logo.png" alt="nomac">
+    <img src="../images/Clients/dopravo.jpg" alt="dopravo">
+    <img src="../images/Clients/devoteam-logo.png" alt="devoteam">
     <img src="../images/Clients/page20_img8.png" alt="Client 18">
     <img src="../images/Clients/page19_img1.png" alt="Client 1">
     <img src="../images/Clients/page19_img3.png" alt="Client 3">
@@ -64,6 +68,10 @@
     <img src="../images/Clients/page19_img9.jpeg" alt="Client 9">
     <img src="../images/Clients/page19_img10.png" alt="Client 10">
     <img src="../images/Clients/page20_img10.png" alt="Client 20">
+    <img src="../images/Clients/27sea.png" alt="27sea">
+    <img src="../images/Clients/elixir.png" alt="elixir">
+    <img src="../images/Clients/aboab.png" alt="aboab">
+    <img src="../images/Clients/acon.png" alt="acon">
     <img src="../images/Clients/najdsteel.png" alt="Client 21">
     <img src="../images/Clients/Zutari.png" alt="Client 22">
     <img src="../images/Clients/al_moallim_company_logo.png" alt="Client 24">
